2010-01-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        animations/combo-transform-translate+scale.html failed on Snow Leopard Debug Bot
        https://bugs.webkit.org/show_bug.cgi?id=33461

        Make test half as long. Remove a setTimeout and tweak tolerances to
        reduce flakiness.

        * animations/combo-transform-translate+scale.html:

2010-01-14  Darin Fisher  <darin@chromium.org>

        Reviewed by Brady Eidson.

        history.pushState should clear the entire forward history
        https://bugs.webkit.org/show_bug.cgi?id=33160

        * fast/loader/stateobjects/pushstate-clears-forward-history-expected.txt: Added.
        * fast/loader/stateobjects/pushstate-clears-forward-history.html: Added.

2010-01-14  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        REGRESSION: svg/css/circle-in-mask-with-shadow.svg failing pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=33498

        After http://trac.webkit.org/changeset/53300 Qt expected files should be updated.

        * platform/qt/svg/css/arrow-with-shadow-expected.txt: updated.
        * platform/qt/svg/css/circle-in-mask-with-shadow-expected.txt: updated.
        * platform/qt/svg/css/mask-with-shadow-expected.txt: updated.
        * platform/qt/svg/css/path-with-shadow-expected.txt: updated.
        * platform/qt/svg/css/stars-with-shadow-expected.txt: updated.
        * platform/qt/svg/filters/shadow-on-rect-with-filter-expected.txt: updated.

2010-01-14  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by David Levin.

        Bug 31865 - Re-do ruby layout tests to use only Latin characters
        (https://bugs.webkit.org/show_bug.cgi?id=31865)

        New base-lines for the Windows platform.

        * platform/win/fast/ruby/ruby-empty-rt-expected.checksum:
        * platform/win/fast/ruby/ruby-empty-rt-expected.png:
        * platform/win/fast/ruby/ruby-empty-rt-expected.txt: