@@ -52,10 +52,10 @@
     const expectedValues = [
       // [time, element-id, property, expected-value, tolerance]
       // color and width of each side should be animating
-      [0.25, 'box', 'border-top-color', [128, 0, 128], 20],
-      [0.25, 'box', 'border-right-color', [128, 0, 128], 20],
-      [0.25, 'box', 'border-bottom-color', [128, 0, 128], 20],
-      [0.25, 'box', 'border-left-color', [128, 0, 128], 20],
+      [0.25, 'box', 'border-top-color', [128, 0, 128], 30],
+      [0.25, 'box', 'border-right-color', [128, 0, 128], 30],
+      [0.25, 'box', 'border-bottom-color', [128, 0, 128], 30],
+      [0.25, 'box', 'border-left-color', [128, 0, 128], 30],
       [0.25, 'box', 'border-top-width', 10, 2],
       [0.25, 'box', 'border-right-width', 10, 2],
       [0.25, 'box', 'border-bottom-width', 10, 2],
